frontend and backend integration fixed